Add StaffIndexPage page type

--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_index.html
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_index.html
@@ -23,7 +23,7 @@
                         </div>
                     {% endif %}
                     {% if page.introduction %}
-                        <div class="title-area__introduction layout__span-one layout__start-two layout__@large-start-three">{{ page.introduction }}</div>
+                        <div class="title-area__introduction layout__span-one layout__start-two layout__@large-start-three">{{ page.introduction|richtext }}</div>
                     {% endif %}
                 </div>
             </div>
@@ -35,7 +35,7 @@
                 <div class="section__notch section__notch--opposite">
 
                     <div class="section__notch-fill section__notch-fill--content-height section__notch-fill--fourth-col">
-                        {% include "patterns/molecules/categories-tablist/categories-tablist.html" with value=page.filters modifier="large" reset=True reset_button_text="Reset" %}
+                        {% include "patterns/molecules/categories-tablist/categories-tablist.html" with value=filters modifier="large" reset=True reset_button_text="Reset" %}
                     </div>
 
                     <div class="filter-tab-options filter-tab-options--mobile">
@@ -64,9 +64,9 @@
 
             <div class="filter-takeover bg bg--light">
                 <div class="filter-takeover__container">
-                    {% for item in page.filters.items %}
-                        <div class="filter-takeover__tab-content tabs__panel tabs__panel--hidden js-tab-panel" id="{{ item.tab_title|slugify }}" role="tabpanel" aria-labelledby="tab-{{ item.tab_title|slugify }}">
-                            {% include "patterns/molecules/filter-tab-options/filter-tab-options.html" with filter_options=item.children %}
+                    {% for item in filters.items %}
+                        <div class="filter-takeover__tab-content tabs__panel tabs__panel--hidden js-tab-panel" id="{{ item.filter_name }}" role="tabpanel" aria-labelledby="tab-{{ item.filter_name }}">
+                            {% include "patterns/molecules/filter-tab-options/filter-tab-options.html" %}
                         </div>
                     {% endfor %}
                 </div>
@@ -74,20 +74,20 @@
 
             <section class="section bg bg--light">
 
-                {% if page.results %}
+                {% if results %}
                     <div class="section__row section__row--first-small section__row--last-small grid">
                         <div class="results-total heading heading--four layout__start-one layout__span-two layout__@large-start-two">
                             <span class="results-total__anchor" id="results"></span>
                             <span class="results-total__type">Results</span>
-                            <span class="results-total__number">236</span>
+                            <span class="results-total__number">{{ result_count }}</span>
                         </div>
                     </div>
                 {% endif %}
 
-                <div class="section__row {% if page.results %}section__row--last-small {% else %}section__row--first-small section__row--last-large{% endif %} grid">
-                    <div class="results {% if not page.results %}results--no-results{% endif %} layout__start-one layout__span-two layout__@large-start-two layout__@large-span-three">
-                        {% if page.results %}
-                            {% for item in page.results %}
+                <div class="section__row {% if results %}section__row--last-small {% else %}section__row--first-small section__row--last-large{% endif %} grid">
+                    <div class="results {% if not results %}results--no-results{% endif %} layout__start-one layout__span-two layout__@large-start-two layout__@large-span-three">
+                        {% if results %}
+                            {% for item in results %}
                                 <div class="results__item layout__span-two layout__@medium-span-one">
                                     {% include "patterns/molecules/card/card--staff.html" %}
                                 </div>
@@ -100,10 +100,10 @@
                     </div>
                 </div>
 
-                {% if page.results %}
+                {% if results %}
                     <div class="section__row section__row--last grid">
                         <div class="layout__span-two layout__@large-span-one layout__start-one layout__@large-start-three">
-                            {% include "patterns/molecules/pagination/pagination.html" %}
+                            {% include "patterns/molecules/pagination/pagination.html" with paginator_page=results %}
                         </div>
                     </div>
                 {% endif %}
