--- a/rca/project_styleguide/templates/patterns/organisms/index-module/index-module.html
+++ b/rca/project_styleguide/templates/patterns/organisms/index-module/index-module.html
@@ -1,7 +1,7 @@
 <div class="index-module" id="{{ id|slugify }}">
     <div class="index-module__container grid">
         <div class="index-module__header">
-            <h2 class="index-module__heading heading heading--two">{{ title }}</h2>
+            <h2 class="index-module__heading heading heading--two {% if anchor_heading %}anchor-heading{% endif %}" {% if anchor_heading %}id="index"{% endif %}>{{ title }}</h2>
         </div>
         <div class="index-module__content">
             {% for item in items %}
