--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.html
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.html
@@ -78,25 +78,25 @@
                 </div>
 
                 {% if related_staff %}
-                    <div class="section__row section__row--first section__row--last" id="staff">
-                        {% include "patterns/organisms/people-module/people-module.html" with people=related_staff title="Staff" %}
+                    <div class="section__row section__row--first section__row--last">
+                        {% include "patterns/organisms/people-module/people-module.html" with people=related_staff title="Staff" anchor_heading=True %}
                     </div>
                 {% endif %}
 
             </section>
+
             {% if page.further_information %}
                 <section class="section bg bg--dark">
-                <div class="section__row short-course-accordion section__row--last" id="{{ page.further_information_title|slugify }}">
-                        {% include "patterns/organisms/accordion-block/accordion-block.html" with accordion_id='1' accordions=page.further_information course_type="short" title=page.further_information_title %}
-                </div>
+                    <div class="section__row short-course-accordion section__row--last">
+                        {% include "patterns/organisms/accordion-block/accordion-block.html" with accordion_id='1' accordions=page.further_information course_type="short" title=page.further_information_title anchor_heading=True section_id=page.further_information_title|slugify %}
+                    </div>
                 </section>
             {% endif %}
 
             {% if related_pages.items %}
-                <section class="section bg bg--dark" id="index">
+                <section class="section bg bg--dark">
                     <div class="section__row section__row--first section__row--last-large">
-                        {% include "patterns/organisms/index-module/index-module.html" with items=related_pages.items title=related_pages.title id=page.related_pages_title %}
-
+                        {% include "patterns/organisms/index-module/index-module.html" with items=related_pages.items title=related_pages.title id=page.related_pages_title anchor_heading=True %}
                     </div>
 
                     <div class="section__notch section__notch--small-med-only">
