--- a/rca/project_styleguide/templates/patterns/molecules/job-titles/job-titles.html
+++ b/rca/project_styleguide/templates/patterns/molecules/job-titles/job-titles.html
@@ -1,12 +1,16 @@
 <div class="job-titles">
-    {% for item in job_title %}
+    {% for group in job_titles %}
         <ul class="job-titles__item">
-            {% for item in item.titles %}
-                <li class="job-titles__title">{{ item.label }}</li>
+            {% for role in group.items %}
+                <li class="job-titles__title">{{ role }}</li>
             {% endfor %}
-                <li class="job-titles__department">
-                    <a class="body body--two link link--tertiary" href="{{ item.link }}">{{ item.department }}</a>
-                </li>
+            <li class="job-titles__department">
+            {% if group.link %}
+                <a class="body body--two link link--tertiary" href="{{ group.link }}">{{ group.label }}</a>
+            {% else %}
+                <p class="body body--two link">{{ group.label }}</p>
+            {% endif %}
+            </li>
         </ul>
     {% endfor %}
 </div>
