add active state to anchor nav menu depending on the section the user is in

--- a/rca/project_styleguide/templates/patterns/molecules/anchor-nav/anchor-nav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/anchor-nav/anchor-nav.html
@@ -1,4 +1,4 @@
-  <div class="anchor-nav">
+  <div class="anchor-nav" data-anchor-nav>
     <h2 class="anchor-nav__heading">On this page</h2>
     <nav class="anchor-nav__nav-container">
       <ul class="anchor-nav__items">
