--- a/rca/static_src/sass/components/_anchor-nav-item.scss
+++ b/rca/static_src/sass/components/_anchor-nav-item.scss
@@ -5,5 +5,12 @@
         @include underline-hover();
         position: relative;
         color: $color--white;
+
+        &.is-active {
+            &::after {
+                width: 100%;
+                left: 0;
+            }
+        }
     }
 }
