Add querystring tag to use for pagination links

--- a/rca/project_styleguide/templates/patterns/molecules/pagination/pagination.html
+++ b/rca/project_styleguide/templates/patterns/molecules/pagination/pagination.html
@@ -1,11 +1,11 @@
-{% load util_tags %}
+{% load util_tags querystring %}
 
 {% if paginator_page.paginator.num_pages > 1 %}
 <nav class="pagination" aria-label="Pagination">
     <ul class="pagination__container body body--two">
         {% if paginator_page.has_previous %}
             <li class="pagination__button pagination__button--prev">
-                <a class="pagination__button-link" href="?page={{ paginator_page.previous_page_number }}&{% for value in extra_query_params %}{{ value }}&amp;{% endfor %}" class="previous">
+                <a class="pagination__button-link" href="{% querystring page=paginator_page.previous_page_number %}" class="previous">
                     <span class="pagination__button-label">previous</span>
                     <svg width="23" height="23" class="pagination__button-icon" aria-hidden="true">
                         <use xlink:href="#arrow-left"></use>
@@ -22,14 +22,14 @@
             {% endif %}
             {% for i in pagination_section %}
                 <li class="pagination__item {% if i == paginator_page.number %}pagination__item--current{% endif %}">
-                    <a href="?page={{i}}&{% for value in extra_query_params %}{{ value }}&amp;{% endfor %}#results" class="pagination__link">{{i}}</a>
+                    <a href="{% querystring page=i %}" class="pagination__link">{{i}}</a>
                 </li>
             {% endfor %}
         {% endfor %}
 
         {% if paginator_page.has_next %}
             <li class="pagination__button pagination__button--next">
-                <a class="pagination__button-link" href="?page={{ paginator_page.next_page_number }}&{% for value in extra_query_params %}{{ value }}&amp;{% endfor %}" class="next">
+                <a class="pagination__button-link" href="{% querystring page=paginator_page.next_page_number %}" class="next">
                     <span class="pagination__button-label">next</span>
                     <svg width="23" height="23" class="pagination__button-icon" aria-hidden="true">
                         <use xlink:href="#arrow-right"></use>
