--- a/rca/project_styleguide/templates/patterns/atoms/reset/reset.html
+++ b/rca/project_styleguide/templates/patterns/atoms/reset/reset.html
@@ -1,4 +1,4 @@
-<a class="reset{% if modifier %} reset--{{ modifier }}{% endif %}" href="{{ value.href }}" data-filters-reset>
+<a class="reset{% if modifier %} reset--{{ modifier }}{% endif %}" href="{{ value.href|default:request.path }}" data-filters-reset>
     <svg class="reset__icon" width="14" height="14">
         <use xlink:href="#reset" />
     </svg>
