--- a/rca/project_styleguide/templates/patterns/atoms/link-primary/link-primary--link.html
+++ b/rca/project_styleguide/templates/patterns/atoms/link-primary/link-primary--link.html
@@ -3,4 +3,9 @@
         <span class="link__label">{{ value.text }}</span>
         <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
     </a>
+{% elif href and text %}
+    <a class="link link--primary link--link" href="{{ href }}">
+        <span class="link__label">{{ text }}</span>
+        <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
+    </a>
 {% endif %}
