update template hardcoded values

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--project.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--project.html
@@ -34,7 +34,7 @@
     {% endif %}
     {% if expertise %}
         <div class="key-details__section key-details__section--tags">
-            <h4 class="body body--two key-details__sub-heading">RCA expertise</h4>
+            <h4 class="body body--two key-details__sub-heading">Expertise</h4>
             <ul class="key-details__list">
                 {% for item in expertise %}
                     <li class="key-details__list-item">
@@ -53,7 +53,7 @@
     {% if page.specification_document %}
         <div class="key-details__section key-details__section--action">
             <a class="key-details__link link link--secondary link--download" href="{{ page.specification_document.url }}">
-                <span class="link__label">Project download</span>
+                <span class="link__label">Download project PDF</span>
                 <svg width="8" height="12" class="link__icon" aria-hidden="true"><use xlink:href="#download"></use></svg>
             </a>
         </div>
