--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--centre.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--centre.html
@@ -48,7 +48,7 @@
             <ul class="key-details__list">
                 <li class="key-details__list-item">
                     <a class="key-details__link link link--secondary link--link" href="mailto:{{ page.centre_email }}">
-                        <span class="link__label">Email {{ page.centre_email }}</span>
+                        <span class="link__label">{{ page.centre_email }}</span>
                         <svg width="8" height="12" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                     </a>
                 </li>
