--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.html
@@ -25,7 +25,7 @@
     {% endif %}
     {% if areas %}
         <div class="key-details__section key-details__section--expertise">
-            <h4 class="body body--two key-details__sub-heading">Areas of expertise</h4>
+            <h4 class="body body--two key-details__sub-heading">Expertise</h4>
             <ul class="key-details__list">
                 {% for item in areas %}
                     <li class="key-details__list-item">
