--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.html
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.html
@@ -156,7 +156,7 @@
                 <section class="section {% if page.bottom_feature_image %}{% else %} section--start{% endif %} section--end bg bg--dark">
                     <div class="section__container">
                         <header class="section__header grid">
-                            <h3 class="section__heading section__heading--primary heading heading--two">What&#39;s happening at the RCA</h3>
+                            <h3 class="section__heading section__heading--primary heading heading--two">News & events</h3>
                         </header>
                         <div class="section__content grid">
                             {% include "patterns/organisms/news/news_api_content.html" with news=page.legacy_news_and_events %}
@@ -172,7 +172,7 @@
                     </div>
                     <div class="contact-anchor" id="contact"></div>
                     <div class="section__row section__row--first">
-                        {% include "patterns/organisms/contact/contact.html" with heading="Contact us" text="Get in touch if you’d like to find out more or have any questions about working with the RCA." image=page.contact_image %}
+                        {% include "patterns/organisms/contact/contact.html" with heading=page.contact_title text="Get in touch if you’d like to find out more or have any questions about working with the RCA." image=page.contact_image %}
                     </div>
                 </section>
 
