--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -78,7 +78,7 @@
                     <div class="section__row section__row--first-small section__row--last-small grid">
                         <div class="results-total heading heading--four layout__start-one layout__span-two layout__@large-start-two">
                             <span class="results-total__anchor" id="results"></span>
-                            <span class="results-total__type">Projects</span>
+                            <span class="results-total__type">Results</span>
                             <span class="results-total__number">{{ results_count }}</span>
                         </div>
                     </div>
