--- a/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
+++ b/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
@@ -6,7 +6,7 @@
 <div class="contact">
     <div class="grid">
         <div class="contact__intro">
-            <h2 class="contact__heading heading heading--four">{{ heading|default:'Contact us' }}</h2>
+            <h2 class="contact__heading heading heading--four">{{ heading|default:'Ask a question' }}</h2>
             <p class="contact__text body body--one">{{ text }}</p>
         </div>
         {% if page.contact_email %}
