--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -21,6 +21,11 @@
 
         {% block body_top %}{% endblock %}
 
+        {% if settings.utils.SitewideAlertSetting.show_alert %}
+            {# Show the sitewide alert message #}
+            {{ settings.utils.SitewideAlertSetting.message|richtext }}
+        {% endif %}
+
         {% include "patterns/molecules/outdated-banner/outdated-banner.html" %}
         {% include "patterns/atoms/sprites/sprites.html" %}
 
