use external link icon

--- a/rca/project_styleguide/templates/patterns/atoms/link-primary/link-primary--link.html
+++ b/rca/project_styleguide/templates/patterns/atoms/link-primary/link-primary--link.html
@@ -1,6 +1,11 @@
+{# value.href = internal link, href = external #}
 {% if value.href and value.text or href and text %}
-    <a class="link link--primary link--link" href="{% firstof value.href href %}">
+    <a class="link link--primary link--link {% if href and text %}link--external{% endif %}" href="{% firstof value.href href %}">
         <span class="link__label">{% firstof value.text text %}</span>
-        <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
+        {% if value.href and value.text %}
+            <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
+        {% elif href and text  %}
+            <svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg>
+        {% endif %}
     </a>
 {% endif %}
