--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.html
@@ -28,10 +28,10 @@
             <h4 class="body body--two key-details__sub-heading">Areas of expertise</h4>
             <ul class="key-details__list">
                 {% for item in areas %}
-                <li class="key-details__list-item">
-                {# Link here depends on the staff picker page #}
-                    <a href="#TODO" class="link link--tertiary">{{ item.area_of_expertise.title }}</a>
-                </li>
+                    <li class="key-details__list-item">
+                    {# Link here depends on the staff picker page #}
+                        <a href="{{ item.link }}" class="link link--tertiary">{{ item.title }}</a>
+                    </li>
                 {% endfor %}
             </ul>
         </div>
