Format the password required template so it's usable

--- a/rca/project_styleguide/templates/patterns/pages/wagtail/password_required.html
+++ b/rca/project_styleguide/templates/patterns/pages/wagtail/password_required.html
@@ -5,24 +5,37 @@
 {% block body_class %}template-password-required{% endblock %}
 
 {% block content %}
-    <h1>Password required</h1>
 
-    <h2>Please enter the password to proceed.</h2>
+    <div class="page page--no-hero">
 
-    <form action="{{ action_url }}" method="post">
-        <div>
-            {% csrf_token %}
-
-            {{ form.non_field_errors }}
-
-            {{ form.password.errors }}
-            {{ form.password.label_tag }}
-            {{ form.password }}
-
-            {% for field in form.hidden_fields %}
-                {{ field }}
-            {% endfor %}
-            <input type="submit" value="Continue" />
+        <header class="page__header bg bg--dark">
+        <div class="section__row section__row--first section__row--first grid">
+        <h1>Password required</h1>
+        <h2>Please enter the password to proceed.</h2>
         </div>
-    </form>
+
+        </header>
+        <div class="page__content">
+            <section class="section section--opposite-notch bg bg--light">
+                <div class="section__row section__row--last section__row--first grid">
+                    <form action="{{ action_url }}" method="post">
+                        <div>
+                            {% csrf_token %}
+
+                            {{ form.non_field_errors }}
+
+                            {{ form.password.errors }}
+                            {{ form.password.label_tag }}
+                            {{ form.password }}
+
+                            {% for field in form.hidden_fields %}
+                                {{ field }}
+                            {% endfor %}
+                            <input type="submit" value="Continue" />
+                        </div>
+                    </form>
+                </div>
+            </section>
+        </div>
+    </div>
 {% endblock %}
