--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -24,8 +24,7 @@
         {% include "patterns/atoms/skip-link/skip-link.html" %}
 
         {% if settings.utils.SitewideAlertSetting.show_alert %}
-            {# Show the sitewide alert message #}
-            {{ settings.utils.SitewideAlertSetting.message|richtext }}
+            {% include "patterns/molecules/sitewide-alert/sitewide-alert.html" %}
         {% endif %}
 
         {% include "patterns/molecules/outdated-banner/outdated-banner.html" %}
