--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -101,6 +101,7 @@
 @import 'components/short-course-details';
 @import 'components/short-course-details-item';
 @import 'components/skip-link';
+@import 'components/sitewide-alert';
 @import 'components/slide';
 @import 'components/slideshow';
 @import 'components/social-item';
