--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -69,6 +69,7 @@
 @import 'components/search';
 @import 'components/search-toggle';
 @import 'components/section';
+@import 'components/sitewide-alert';
 @import 'components/slide';
 @import 'components/slideshow';
 @import 'components/social-item';
