ensure skip link shows

--- a/rca/static_src/sass/components/_skip-link.scss
+++ b/rca/static_src/sass/components/_skip-link.scss
@@ -1,3 +1,13 @@
 .skip-link {
-    @include hidden();
+    @include z-index(header-gridlines);
+    position: absolute;
+    top: -200px;
+    left: 0;
+    color: $color--black;
+    background-color: $color--white;
+    padding: $grid;
+
+    &:focus {
+        top: 0;
+    }
 }
