ensure booking modal is associated with the aria-label on the booking bar

--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
@@ -33,7 +33,7 @@
         </header>
 
         {% if booking_bar %}
-            {% include "patterns/molecules/booking-bar/booking-bar.html" with item=booking_bar modal=booking_bar.modal %}
+            {% include "patterns/molecules/booking-bar/booking-bar.html" with item=booking_bar modal=booking_bar.modal modal_aria_label="booking-details-title" %}
         {% endif %}
 
         <div class="page__content js-sticky-point js-sticky-point--bottom">
