--- a/rca/project_styleguide/templates/patterns/atoms/modal-launcher/modal-launcher.html
+++ b/rca/project_styleguide/templates/patterns/atoms/modal-launcher/modal-launcher.html
@@ -5,7 +5,7 @@
     <a href="{{ item.link }}" class="modal-launcher">
 {% endif %}
     <div class="modal-launcher__container">
-        <div class="modal-launcher__label">
+        <div class="modal-launcher__label" id="{{ modal_aria_label }}">
             {{ item.action }}
         </div>
         <div class="modal-launcher__icon-container">
