--- a/rca/project_styleguide/templates/patterns/molecules/booking-bar/booking-bar.html
+++ b/rca/project_styleguide/templates/patterns/molecules/booking-bar/booking-bar.html
@@ -6,7 +6,7 @@
         </div>
         {% if page.show_register_link %}
             <div class="booking-bar__action">
-                {% include "patterns/atoms/modal-launcher/modal-launcher.html" %}
+                {% include "patterns/atoms/modal-launcher/modal-launcher.html" with modal_aria_label=modal_aria_label %}
             </div>
         {% endif %}
     </div>
