--- a/rca/project_styleguide/templates/patterns/molecules/breadcrumb/breadcrumb.html
+++ b/rca/project_styleguide/templates/patterns/molecules/breadcrumb/breadcrumb.html
@@ -3,7 +3,7 @@
     {% for ancestor_page in page.get_ancestors %}
         {% if not ancestor_page.is_root and ancestor_page.title != 'Home' %}
                 <li class="breadcrumb__item">
-                    <a class="breadcrumb__item-link" href="{% pageurl ancestor_page %}" title="{{ ancestor_page.title }}">{{ ancestor_page.title }}
+                    <a class="breadcrumb__item-link" href="{% pageurl ancestor_page %}">{{ ancestor_page.title }}
                     </a>
                 </li>
         {% endif %}
