--- a/rca/project_styleguide/templates/patterns/organisms/image-video-block/image-video-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/image-video-block/image-video-block.html
@@ -10,7 +10,7 @@
                     {{ school }}
                 </div>
             {% endif %}
-            {% if has_meta and subheading %}<h3 class="image-video-block__subheading heading heading--four image-video-block__subheading--mobile">{{ subheading }}</h3>{% endif %} 
+            {% if has_meta and subheading %}<h3 class="image-video-block__subheading heading heading--four image-video-block__subheading--mobile">{{ subheading }}</h3>{% endif %}
         </div>
     {% endif %}
     {% if not out_of_grid %}
@@ -27,7 +27,9 @@
                     {{ school }}
                 </div>
             {% endif %}
-            <h3 class="image-video-block__subheading heading heading--four {% if has_meta %}image-video-block__subheading--tablet{% endif %}">{{ subheading }}</h3>
+            {% if subheading %}
+                <h3 class="image-video-block__subheading heading heading--four {% if has_meta %}image-video-block__subheading--tablet{% endif %}">{{ subheading }}</h3>
+            {% endif %}
             {% if has_meta %}
                 <div class="image-video-block__meta">
                     {% if meta_heading %}
