improve carousel aria-labels

--- a/rca/project_styleguide/templates/patterns/organisms/carousel/carousel.html
+++ b/rca/project_styleguide/templates/patterns/organisms/carousel/carousel.html
@@ -18,12 +18,12 @@
             {% endfor %}
         </div>
         <div class="carousel__controls-group" data-glide-el="controls">
-            <button class="carousel__button carousel__button--prev button" aria-label="Previous" data-glide-dir="<">
+            <button class="carousel__button carousel__button--prev button" aria-label="Previous image" data-glide-dir="<">
                 <svg class="carousel__button-icon" width="46" height="46">
                     <use xlink:href="#arrow-left" />
                 </svg>
             </button>
-            <button class="carousel__button carousel__button--next button" aria-label="Next" data-glide-dir=">">
+            <button class="carousel__button carousel__button--next button" aria-label="Next image" data-glide-dir=">">
                 <svg class="carousel__button-icon" width="46" height="46">
                     <use xlink:href="#arrow-right" />
                 </svg>
