--- a/rca/project_styleguide/templates/patterns/organisms/carousel/carousel--square.html
+++ b/rca/project_styleguide/templates/patterns/organisms/carousel/carousel--square.html
@@ -10,12 +10,12 @@
             {% endfor %}
         </ul>
         <div class="carousel__controls-group grid" data-glide-el="controls">
-            <button class="carousel__button carousel__button--prev button" aria-label="Previous" data-glide-dir="<">
+            <button class="carousel__button carousel__button--prev button" aria-label="Previous image" data-glide-dir="<">
                 <svg class="carousel__button-icon" width="46" height="46" aria-hidden="true">
                     <use xlink:href="#arrow-left" />
                 </svg>
             </button>
-            <button class="carousel__button carousel__button--next button" aria-label="Next" data-glide-dir=">">
+            <button class="carousel__button carousel__button--next button" aria-label="Next image" data-glide-dir=">">
                 <svg class="carousel__button-icon" width="46" height="46" aria-hidden="true">
                     <use xlink:href="#arrow-right" />
                 </svg>
