--- a/rca/project_styleguide/templates/patterns/organisms/slideshow/slideshow.html
+++ b/rca/project_styleguide/templates/patterns/organisms/slideshow/slideshow.html
@@ -15,12 +15,12 @@
             {% endfor %}
         </div>
         <div class="slideshow__controls-group" data-glide-el="controls">
-            <button class="slideshow__button slideshow__button--prev button" aria-label="Previous" data-glide-dir="<">
+            <button class="slideshow__button slideshow__button--prev button" aria-label="Previous image" data-glide-dir="<">
                 <svg class="slideshow__button-icon" width="46" height="46">
                     <use xlink:href="#arrow-left" />
                 </svg>
             </button>
-            <button class="slideshow__button slideshow__button--next button" aria-label="Next" data-glide-dir=">">
+            <button class="slideshow__button slideshow__button--next button" aria-label="Next image" data-glide-dir=">">
                 <svg class="slideshow__button-icon" width="46" height="46">
                     <use xlink:href="#arrow-right" />
                 </svg>
