--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
@@ -37,7 +37,9 @@
     {% else %}
         {% if page.programme_details_credits or page.programme_details_time or page.programme_details_duration %}
             <div class="key-details__section key-details__section--details">
-                <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_fields.key_details_programme_details_title }}</h4>
+                {% if programme_page_global_fields.key_details_programme_details_title %}
+                    <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_fields.key_details_programme_details_title }}</h4>
+                {% endif %}
                 <ul class="key-details__list">
                     {% if page.programme_details_credits and page.programme_details_credits_suffix %}
                     <li class="key-details__list-item">
@@ -59,7 +61,9 @@
         {% endif %}
         {% if page.next_open_day_date %}
             <div class="key-details__section key-details__section--open-days">
-                <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_fields.key_details_next_open_day_title }}</h4>
+                {% if programme_page_global_fields.key_details_next_open_day_title %}
+                    <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_fields.key_details_next_open_day_title }}</h4>
+                {% endif %}
                 <ul class="key-details__list">
                     <li class="key-details__list-item">{{ page.next_open_day_date }}</li>
                     <li class="key-details__list-item">
@@ -73,7 +77,9 @@
         {% endif %}
         {% if page.application_deadline %}
             <div class="key-details__section key-details__section--deadline">
-                <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_fields.key_details_application_deadline_title }}</h4>
+                {% if programme_page_global_fields.key_details_application_deadline_title %}
+                    <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_fields.key_details_application_deadline_title }}</h4>
+                {% endif %}
                 <ul class="key-details__list">
                     {% if page.application_deadline_options == '1' %}
                         <li class="key-details__list-item">{{ page.get_application_deadline_options_display }}</li>
@@ -86,7 +92,9 @@
         {% endif %}
         {% if page.career_opportunities.all %}
             <div class="key-details__section key-details__section--career">
-                <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_fields.key_details_career_opportunities_title }}</h4>
+                {% if programme_page_global_fields.key_details_career_opportunities_title %}
+                    <h4 class="body body--two key-details__sub-heading">{{ programme_page_global_fields.key_details_career_opportunities_title }}</h4>
+                {% endif %}
                 <ul class="key-details__list">
                 {% for detail in page.career_opportunities.all %}
                     <li class="key-details__list-item">{{ detail.text }}</li>
