refactoring link underline animation

--- a/rca/static_src/sass/abstracts/_mixins.scss
+++ b/rca/static_src/sass/abstracts/_mixins.scss
@@ -133,30 +133,19 @@
 */
 
 @mixin underline-hover-target() {
-    &::after {
-        content: '';
-        display: block;
-        height: 2px;
-        left: 0;
-        position: absolute;
-        background: currentColor;
-        transition: width $transition, left $transition;
-        width: 100%;
-        bottom: -2px;
-    }
+    background-image: linear-gradient(currentColor, currentColor);
+    background-position: 100% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 2px;
+    transition: background-size $cubic-transition;
 
-    &::after {
-        @include media-query(medium) {
-            width: 0;
-        }
+    @include media-query(medium) {
+        background-position: 0% 100%;
     }
 }
 
 @mixin underline-hover-target-reset() {
-    &::after {
-        width: 100%;
-        left: 0;
-    }
+    background-size: 100% 2px;
 }
 
 @mixin underline-hover() {
