--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--staff.html
@@ -1,39 +1,41 @@
-<div class="key-details key-details--staff">
-    <div class="key-details__header">
-        <h3 class="heading heading--five key-details__heading">Key details</h3>
+{% if related_schools or research_centres or areas %}
+    <div class="key-details key-details--staff">
+        <div class="key-details__header">
+            <h3 class="heading heading--five key-details__heading">Key details</h3>
+        </div>
+        {% if related_schools or research_centres %}
+            <div class="key-details__section key-details__section--school">
+                <h4 class="body body--two key-details__sub-heading">School, Centre or Area</h4>
+                <ul class="key-details__list">
+                    {% if related_schools  %}
+                        {% for item in related_schools %}
+                        <li class="key-details__list-item">
+                            <a href="{{ item.page.url }}" class="link link--tertiary">{{ item.page.title }}</a>
+                        </li>
+                        {% endfor %}
+                    {% endif %}
+                    {% if research_centres %}
+                        {% for item in research_centres %}
+                        <li class="key-details__list-item">
+                            <a href="{{ item.page.url }}" class="link link--tertiary">{{ item.page.title }}</a>
+                        </li>
+                        {% endfor %}
+                    {% endif %}
+                </ul>
+            </div>
+        {% endif %}
+        {% if areas %}
+            <div class="key-details__section key-details__section--expertise">
+                <h4 class="body body--two key-details__sub-heading">Expertise</h4>
+                <ul class="key-details__list">
+                    {% for item in areas %}
+                        <li class="key-details__list-item">
+                        {# Link here depends on the staff picker page #}
+                            <a href="{{ item.link }}" class="link link--tertiary">{{ item.title }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
     </div>
-    {% if related_schools or research_centres %}
-        <div class="key-details__section key-details__section--school">
-            <h4 class="body body--two key-details__sub-heading">School, Centre or Area</h4>
-            <ul class="key-details__list">
-                {% if related_schools  %}
-                    {% for item in related_schools %}
-                    <li class="key-details__list-item">
-                        <a href="{{ item.page.url }}" class="link link--tertiary">{{ item.page.title }}</a>
-                    </li>
-                    {% endfor %}
-                {% endif %}
-                {% if research_centres %}
-                    {% for item in research_centres %}
-                    <li class="key-details__list-item">
-                        <a href="{{ item.page.url }}" class="link link--tertiary">{{ item.page.title }}</a>
-                    </li>
-                    {% endfor %}
-                {% endif %}
-            </ul>
-        </div>
-    {% endif %}
-    {% if areas %}
-        <div class="key-details__section key-details__section--expertise">
-            <h4 class="body body--two key-details__sub-heading">Expertise</h4>
-            <ul class="key-details__list">
-                {% for item in areas %}
-                    <li class="key-details__list-item">
-                    {# Link here depends on the staff picker page #}
-                        <a href="{{ item.link }}" class="link link--tertiary">{{ item.title }}</a>
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
-    {% endif %}
-</div>
+{% endif %}
